--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^9.0.0",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
     "pg": "^8.11.0",
